--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "mongo:uninstall": ".\\mongo\\uninstall.bat"
   },
   "dependencies": {
-    "@nestjs/common": "^7.4.2",
+    "@nestjs/common": "^7.6.14",
     "@nestjs/core": "^7.4.2",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/platform-socket.io": "^7.4.2",
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/websockets": "^7.4.2",
-    "@nexjs/wsserver": "^1.6.0",
+    "@nexjs/wsserver": "^2.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/helmet": "0.0.47",
     "@types/mongodb": "^3.5.25",
@@ -55,6 +54,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
+    "socket.io": "^4.0.0",
     "strongly-typed-events": "^1.6.16",
     "swagger-ui-express": "^4.1.4"
   },
@@ -72,7 +72,6 @@
     "@types/node": "^14.0.27",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
-    "@types/socket.io": "^2.1.10",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
